--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev":"nodemon ./api/index.js",
     "start":"node ./api/index.js",
-    "build":"npm run --prefix client build"
+    "build":"npm install && npm --prefix client install && npm run --prefix client build"
   },
   "keywords": [],
   "author": "",
